// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`G-code snapshot — carvera_3axis.hbs > carvera 3-axis dialect 1`] = `
"; Makera Carvera — 3-Axis G-code
; Machine: Makera Carvera — carvera-3ax
; Operation: Snapshot Carvera 3-Axis
; ---------------------------------------------------------------------------
; SAFETY CHECKLIST:
; [1] Workpiece securely clamped to table
; [2] Correct tool loaded in ATC slot (T1–T6)
; [3] Work coordinate system (WCS) zeroed — use G10 L20 P1 or controller UI
; [4] Air-cut first: spindle off, Z raised, 10% feed override
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your Carvera firmware docs
; before running on the machine.
; Before production: dry run — spindle off, Z high, feed reduced.
; Compare a short program to a known-good file from Makera CAM.
; See docs/MACHINES.md — safe Z, WCS, units, spindle M-codes.
; ---------------------------------------------------------------------------
; ATC: Carvera 6-slot auto tool changer (T1–T6). T0 = probe, T-1 = no tool.
; After M6, the machine automatically probes tool length.
; G43 H(tool#) applies tool length compensation.
; G49 cancels tool length compensation at program end.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; Spindle range: 6000–15000 RPM
; ---------------------------------------------------------------------------
G21              ; millimeters
G90              ; absolute positioning
G17              ; XY plane
; --- Tool change (ATC) ---
; Verify tool number matches the slot loaded in the Carvera ATC.
M6 T1            ; select tool 1 and execute tool change (auto-probes length)
G43 H1           ; apply tool length compensation for tool 1

; Safe retract and spindle start
G0 Z100 ; safe Z retract
M3 S12000
G4 P2            ; dwell 2s for spindle to reach speed

; --- Toolpath ---
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; --- end toolpath ---

; --- End ---
M5
G49              ; cancel tool length compensation
G0 Z100 ; retract Z
G0 X0 Y0        ; park X Y
M9               ; coolant/vacuum off
M2               ; program end (NOT M30 — M30 may delete file on Smoothieware)
"
`;

exports[`G-code snapshot — carvera_4axis.hbs > carvera 4-axis dialect 1`] = `
"; Makera Carvera — 4-Axis Rotary G-code
; Machine: Makera Carvera 4-Axis — carvera-4ax
; Operation: Snapshot Carvera 4-Axis
; ---------------------------------------------------------------------------
; SAFETY CHECKLIST:
; [1] Rotary attachment secured to table
; [2] Stock centered in chuck, tailstock engaged
; [3] Stock diameter matches CAM setup (Y dimension)
; [4] Z=0 is at stock CENTER (rotation axis), NOT surface
; [5] A=0 set via controller or G28.3 A0
; [6] Air-cut first: spindle off, Z raised, 10% feed override
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your Carvera firmware docs
; and your rotary attachment manual before running on the machine.
; Before production: dry run — spindle off, Z high, feed reduced.
; Compare a short program to a known-good file from Makera CAM.
; See docs/MACHINES.md — safe Z, WCS, units, spindle M-codes.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; A-axis range: continuous (verify against firmware soft limits)
; Spindle range: 6000–15000 RPM
; ---------------------------------------------------------------------------
G21              ; millimeters
G90              ; absolute positioning
G17              ; XY plane
; Safe retract, center on rotary axis, and spindle start
G0 Z100 ; safe Z retract
G0 Y0            ; CRITICAL: center tool on rotation axis (Y must be 0 for 4-axis)
M3 S12000
G4 P2            ; dwell 2s for spindle to reach speed
; --- 4-axis toolpath moves begin (X Y Z A words) ---
G0 X0 Y0 Z20 A0
G1 X10 Z-2.000 A0 F600
G1 X10 Z-2.000 A90 F400
G1 X10 Z-2.000 A180 F400
G1 X10 Z-2.000 A270 F400
G0 Z20 A0
; --- end toolpath ---
; --- End ---
M5
G0 Z100 ; retract Z
G0 A0            ; return A to zero
G0 X0 Y0        ; park X, re-center Y on rotation axis
M9               ; coolant/vacuum off
M2               ; program end (NOT M30 — M30 may delete file on Smoothieware)
"
`;

exports[`G-code snapshot — carvera_4axis_grbl.hbs > grbl_4axis dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; 4-AXIS (A-ROTARY) G-CODE — grbl_4axis dialect
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your Carvera firmware docs
; and your rotary attachment manual before running on the machine.
; ---------------------------------------------------------------------------
; CRITICAL 4TH AXIS CHECKS BEFORE RUNNING:
; (1) Confirm the rotary attachment is firmly clamped to the table.
; (2) Confirm the workpiece is centred on the rotary chuck — off-centre
;     stock causes gouging and crashes.
; (3) Confirm cylinder diameter matches the value used to generate toolpaths.
; (4) Set A-axis WCS zero (usually the left face of the cylinder, A=0°).
; (5) Air-cut with spindle off at 10 % feed override before a real cut.
; (6) Confirm your Carvera firmware supports the A word in Grbl (some builds
;     require the rotary axis plugin — check Makera documentation).
; ---------------------------------------------------------------------------
; Retract order: lift Z to a safe radial clearance before commanding large A moves
; (toolpath lines already use clearance Z between passes; header retract is machine max Z).
; Before production: dry run — spindle off, Z high, feed reduced.
; Compare a short program to a known-good file from Makera CAM.
; See docs/MACHINES.md — safe Z, WCS, units, spindle M-codes.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
; A-axis range: ±360° (verify against firmware soft limits)
G21              ; millimeters — must match Carvera controller settings
G90              ; absolute distance mode (X Y Z A all absolute)
G17              ; XY plane for G2/G3 arcs; 4-axis arcs use XZ with G18 if needed
; Operation: Snapshot 4-Axis GRBL
; Home / safe position — retract Z before rotating A to avoid collisions
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 Y0            ; CRITICAL: center tool on rotation axis (Y must be 0 for 4-axis rotary)
; Spindle on (Grbl — confirm S value matches your bit and material)
M3 S12000
; --- 4-axis toolpath moves begin (X Y Z A words) ---
G0 X0 Y0 Z20 A0
G1 X10 Z-2.000 A0 F600
G1 X10 Z-2.000 A90 F400
G1 X10 Z-2.000 A180 F400
G1 X10 Z-2.000 A270 F400
G0 Z20 A0
; --- end toolpath ---
; Spindle off
M5
; Retract Z to machine max clearance and park
; (Toolpath already returns A to 0° and retracts Z to clearance;
;  this final retract ensures the tool is at machine-max Z for unload.)
G0 Z100 ; full retract for unload
G0 X0 Y0        ; park X, re-center Y on rotation axis
; Program end. M2 (NOT M30): Smoothieware-family firmware (Carvera) can read
; M30 as "program end and delete the file from the SD card".
M2
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > Fanuc dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Operation: Snapshot Test — Fanuc
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3 S10000
G4 P2            ; dwell 2s so the spindle reaches commanded RPM before the first cut
; Pre-cut safe-Z lift so the first move starts from a known clearance,
; regardless of where the previous job left Z or what Z the controller booted into.
G0 Z100 ; safe Z lift before first toolpath move
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30               ; program end — M2 for Smoothieware/GRBL (Carvera), M30 for Mach3/RichAuto/Fanuc
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > GRBL dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Operation: Snapshot Test — GRBL
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3 S12000
G4 P2            ; dwell 2s so the spindle reaches commanded RPM before the first cut
; Pre-cut safe-Z lift so the first move starts from a known clearance,
; regardless of where the previous job left Z or what Z the controller booted into.
G0 Z100 ; safe Z lift before first toolpath move
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M2               ; program end — M2 for Smoothieware/GRBL (Carvera), M30 for Mach3/RichAuto/Fanuc
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > GRBL dialect with WCS offset 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Active work offset — verify fixture zero matches G54–G59 selection
G56
; Operation: Snapshot WCS — G56
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3 S12000
G4 P2            ; dwell 2s so the spindle reaches commanded RPM before the first cut
; Pre-cut safe-Z lift so the first move starts from a known clearance,
; regardless of where the previous job left Z or what Z the controller booted into.
G0 Z100 ; safe Z lift before first toolpath move
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M2               ; program end — M2 for Smoothieware/GRBL (Carvera), M30 for Mach3/RichAuto/Fanuc
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > Heidenhain dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Operation: Snapshot Test — Heidenhain
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3 S10000
G4 P2            ; dwell 2s so the spindle reaches commanded RPM before the first cut
; Pre-cut safe-Z lift so the first move starts from a known clearance,
; regardless of where the previous job left Z or what Z the controller booted into.
G0 Z100 ; safe Z lift before first toolpath move
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30               ; program end — M2 for Smoothieware/GRBL (Carvera), M30 for Mach3/RichAuto/Fanuc
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > Mach3 dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Operation: Snapshot Test — Mach3
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3
G4 P2            ; dwell 2s so the spindle reaches commanded RPM before the first cut
; Pre-cut safe-Z lift so the first move starts from a known clearance,
; regardless of where the previous job left Z or what Z the controller booted into.
G0 Z100 ; safe Z lift before first toolpath move
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30               ; program end — M2 for Smoothieware/GRBL (Carvera), M30 for Mach3/RichAuto/Fanuc
"
`;

exports[`G-code snapshot — cnc_generic_mm.hbs > Siemens dialect 1`] = `
"; Snapshot Mill — snapshot-mill
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your controller before
; running on a machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Before production: (1) air cut / dry run — spindle off, Z high, reduced feed
; (2) single-axis jog tests if you changed WCS or macros (3) shallow first cut
; in soft stock (4) compare a short program to a known-good file for this control
; See docs/MACHINES.md — safe Z, WCS, units (G20/G21), spindle M-codes, arc support.
; ---------------------------------------------------------------------------
; Spindle/coolant: profile dialect inserts snippets below — Grbl, Mach3, and others
; differ on M3/M4/M5, S-word RPM, and coolant (M7/M8/M9). Confirm on your control.
; ---------------------------------------------------------------------------
; Tool change: this template does not emit M6, ATC macros, or tool-length comp.
; It assumes a single-tool program unless you add tool-change blocks yourself.
; Verify the full sequence (spindle stop, safe Z, M6/T/H if used) on your control
; before running multi-tool jobs.
; ---------------------------------------------------------------------------
; Work area (mm): 200 x 200 x 100
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
; Operation: Snapshot Test — Siemens
; Spindle on (dialect from machine profile — change profile if M3/S/RPM differ)
M3 S10000
G4 P2            ; dwell 2s so the spindle reaches commanded RPM before the first cut
; Pre-cut safe-Z lift so the first move starts from a known clearance,
; regardless of where the previous job left Z or what Z the controller booted into.
G0 Z100 ; safe Z lift before first toolpath move
G0 X0 Y0 Z10
G0 X5 Y5 Z5
G1 Z-1.000 F300
G1 X15 Y5 F800
G1 X15 Y15
G1 X5 Y15
G1 X5 Y5
G0 Z10
; Spindle off (dialect snippet — usually M5)
M5
; Retract Z to safe clearance and park (adjust to your machine's preferred home)
G0 Z100 ; safe Z retract — adjust to your actual safe clearance
G0 X0 Y0                     ; park X Y — adjust to your preferred home position
M30               ; program end — M2 for Smoothieware/GRBL (Carvera), M30 for Mach3/RichAuto/Fanuc
"
`;
